tests/failing/vrev.tail
let v1:S(int,13) = prSclI(13) in
let v2:<int>3 = prArrI(vreverseV{[int],[3]}([1,2,3])) in
let v3:[int]2 = vreverse{[int],[2]}(reshape{[int],[1,2]}([3,4],iotaV(10))) in
let v5:[int]2 = prArrI(each{[int,int],[2]}(fn v4:[int]0 => subi(v4,1),v3)) in
let v6:<int>0 = prArrI(vreverseV{[int],[0]}(zilde)) in
0.0
